# nutrition-ai-crates

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: lib.rs  types.rs
src/prompts/: prompt.txt
